feat: Introduce new React-based UI for player controls, settings, and theme management, injected via content script and updated manifest.

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
                 "https://music.youtube.com/*"
             ],
             "js": [
-                "src/extension/content.ts"
+                "src/extension/content.tsx"
             ],
             "run_at": "document_idle"
         }
