--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Hori-s.FM AI DJ",
+    "name": "Hori FM - AI DJ",
     "version": "1.0.0",
     "description": "AI Radio Host for YouTube Music",
     "permissions": [
