--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "colorjs.io": "^0.6.0",
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.562.0",
+    "node-vibrant": "^4.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
