--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "dev:firefox": "cross-env TARGET_BROWSER=firefox vite",
+    "build:chrome": "vite build",
+    "build:firefox": "cross-env TARGET_BROWSER=firefox vite build",
+    "build": "pnpm build:chrome && pnpm build:firefox",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +20,7 @@
     "node-vibrant": "^4.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "webextension-polyfill": "^0.12.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
@@ -25,8 +29,10 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/webextension-polyfill": "^0.12.4",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
+    "cross-env": "^10.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
