WIP: remote calling
create server and website, add background.js, rewrite calling to support a different remote source, rewrite some other parts of code and calling UI etc.

--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,14 @@
         "storage"
     ],
     "host_permissions": [
-        "https://music.youtube.com/*",
-        "https://generativelanguage.googleapis.com/*",
-        "https://suggestqueries.google.com/*"
+      "https://music.youtube.com/*",
+      "https://generativelanguage.googleapis.com/*",
+      "https://suggestqueries.google.com/*",
+      "ws://127.0.0.1:8765/*",
+      "ws://localhost:8765/*",
+      "http://127.0.0.1:8765/*",
+      "http://localhost/*",
+      "*://localhost:*/*"
     ],
     "background": {
         "service_worker": "src/background.ts",
