--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "start": "concurrently \"pnpm start:relay\" \"pnpm start:app\" \"pnpm dev\"",
+    "start:relay": "cd relay-server && pnpm start",
+    "start:app": "cd remote-client && pnpm dev",
     "dev": "vite",
     "dev:firefox": "cross-env TARGET_BROWSER=firefox vite",
     "build:chrome": "vite build",
@@ -32,6 +35,7 @@
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.23",
+    "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
