--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
       "ws://localhost:8765/*",
       "http://127.0.0.1:8765/*",
       "http://localhost/*",
-      "*://localhost:*/*"
+      "*://localhost:*/*",
+      "wss://horizon-api.matejpesl.cz/*"
     ],
     "background": {
         "service_worker": "src/background.ts",
