--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-vibrant": "^4.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-qr-code": "^2.0.18",
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
