fixed palette extraction in firefox extension

--- a/manifest.json
+++ b/manifest.json
@@ -13,11 +13,14 @@
         "storage"
     ],
     "host_permissions": [
-      "https://music.youtube.com/*",
-      "https://generativelanguage.googleapis.com/*",
-      "https://suggestqueries.google.com/*",
-      "*://localhost:*/*",
-      "wss://horizon-api.matejpesl.cz/*"
+        "https://music.youtube.com/*",
+        "https://generativelanguage.googleapis.com/*",
+        "https://suggestqueries.google.com/*",
+        "*://*.ytimg.com/*",
+        "*://*.googleusercontent.com/*",
+        "*://*.ggpht.com/*",
+        "*://localhost:*/*",
+        "wss://horizon-api.matejpesl.cz/*"
     ],
     "background": {
         "service_worker": "src/background.ts",
