--- a/manifest.json
+++ b/manifest.json
@@ -46,5 +46,14 @@
             ],
             "run_at": "document_idle"
         }
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": [
+                "assets/*",
+                "src/assets/sweepers/*/*.mp3"
+            ],
+            "matches": ["https://music.youtube.com/*"]
+        }
     ]
 }
