--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "AI Radio for Youtube Music",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "AI generated Host and DJ voice-overs for YouTube Music",
     "icons": {
         "16": "icon.png",
@@ -53,7 +53,9 @@
                 "assets/*",
                 "src/assets/sweepers/*/*.mp3"
             ],
-            "matches": ["https://music.youtube.com/*"]
+            "matches": [
+                "https://music.youtube.com/*"
+            ]
         }
     ]
 }
