--- a/manifest.json
+++ b/manifest.json
@@ -13,14 +13,22 @@
         "storage"
     ],
     "host_permissions": [
-        "https://music.youtube.com/*",
-        "https://generativelanguage.googleapis.com/*",
-        "https://suggestqueries.google.com/*",
-        "*://*.ytimg.com/*",
-        "*://*.googleusercontent.com/*",
-        "*://*.ggpht.com/*",
-        "*://localhost:*/*",
-        "wss://horizon-api.matejpesl.cz/*"
+      "https://music.youtube.com/*",
+      "https://generativelanguage.googleapis.com/*",
+      "https://suggestqueries.google.com/*",
+      "*://*.ytimg.com/*",
+      "*://*.googleusercontent.com/*",
+      "*://*.ggpht.com/*",
+      
+      "wss://horizon-api.matejpesl.cz/*",
+
+      "*://localhost/*",
+      "ws://localhost/*",
+      "wss://localhost/*",
+
+      "*://127.0.0.1/*",
+      "ws://127.0.0.1/*",
+      "wss://127.0.0.1/*"
     ],
     "background": {
         "service_worker": "src/background.ts",
